--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 ascii = "1.1.0"
 byteorder = "1.5.0"
 const-crc32 = "1.3.0"
+env_logger = "0.11.5"
 log = "0.4.22"
 nom = "7.1.3"
 rand = "0.8.5"
